# profile.mobile.apps.native.homescreen-efl

./: .cproject  .gitignore  .project  .rds_delta  .sdk_delta.info  CMakeLists.txt  org.tizen.homescreen-efl-0.0.1-arm.tpk  org.tizen.homescreen-efl-0.0.1-i386.tpk  org.tizen.homescreen-efl-1.0.0-arm-debug.tpk  org.tizen.homescreen-efl-1.0.0-arm.tpk  org.tizen.homescreen-efl-1.0.0-arm_debug.tpk  org.tizen.homescreen-efl-1.0.0-i386-debug.tpk  org.tizen.homescreen-efl-1.0.0-i386.tpk  org.tizen.homescreen-efl-1.0.0-i386_debug.tpk  org.tizen.homescreen-efl.efl  org.tizen.homescreen-efl.manifest  org.tizen.homescreen-efl.xml  project_def.prop  tizen-manifest.xml
.sign/: .manifest.tmp  author-signature.xml  signature1.xml
CMake/: CMakeLists.txt
CMake/res/: CMakeLists.txt
CMake/res/edje/: CMakeLists.txt
CMake/res/images/: CMakeLists.txt
inc/: all_apps.h  app_grid.h  app_icon.h  app_item.h  app_mgr.h  apps_data.h  apps_db.h  apps_package_manager.h  apps_view.h  cluster_data.h  cluster_db.h  cluster_page.h  cluster_view.h  conf.h  data_model.h  dynamic_index.h  edc_conf.h  folder_panel.h  homescreen-efl.h  hw_key.h  key.h  layout.h  livebox_all_pages.h  menu.h  mouse.h  option_menu.h  page_indicator.h  page_scroller.h  popup.h  tree.h  util.h  view.h  widget_viewer.h
inc/add_viewer/: add_viewer.h  list_view.h  view.h  widget.h
inc/add_widget_viewer/: add_widget_data.h  add_widget_viewer.h
inc/db/: db.h
inc/livebox/: grid_item_resize.h  grid_reposition.h  livebox_animator.h  livebox_panel.h  livebox_utils.h  livebox_widget.h
packaging/: org.tizen.homescreen-efl.spec
res/: CMakeLists.txt
res/edje/: CMakeLists.txt  add_widget_viewer.edc  app_grid.edc  app_icon.edc  apps_chooser_btn.edc  apps_folder_icon.edc  apps_folder_popup.edc  apps_view.edc  apps_view_bg.edc  cluster_allpage.edc  cluster_allpage_thumbnail.edc  cluster_page.edc  cluster_view.edc  color_classes.edc  custer_view.edc  folder.edc  folder_entry.edc  home.edc  home_btn.edc  icon.edc  index_element.edc  livebox_container.edc  livebox_layout.edc  page_edit.edc  page_edit_util.edc  page_indicator_unit.edc  preview.edc  widget.edc
res/images/: CMakeLists.txt
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+11 more)
src/: all_apps.c  app_grid.c  app_icon.c  app_item.c  app_mgr.c  apps_data.c  apps_db.c  apps_package_manager.c  apps_view.c  cluster_data.c  cluster_db.c  cluster_page.c  cluster_view.c  conf.c  data_model.c  dynamic_index.c  folder_panel.c  homescreen-efl.c  hw_key.c  key.c  layout.c  livebox_all_pages.c  menu.c  mouse.c  option_menu.c  page_indicator.c  page_scroller.c  popup.c  tree.c  util.c  widget_viewer.c
src/add_viewer/: add_viewer.c  list_view.c  view.c  widget.c
src/add_widget_viewer/: add_widget_data.c  add_widget_viewer.c
src/db/: db.c
src/livebox/: grid_item_resize.c  grid_reposition.c  livebox_animator.c  livebox_panel.c  livebox_utils.c  livebox_widget.c
