INSTALL(FILES
	app_icon_downloadable.png
	app_press_117.png
	btn_add_nor.png
	btn_add_press.png
	btn_delete_nor.png
	btn_delete_press.png
	btn_input_clear.png
	default_bg.png
	edit_all_page_add.png
	edit_all_page_add_press.png
	edit_all_page_bg.png
	folder_appicon_bg_impossible.png
	folder_appicon_bg.png
	folder_appicon_bg_possible.png
	folder_appicon_empty_bg.png
	folder_popup_bg.png
	home_button_bg.png
	home_icon_home.png
	home_icon_menu.png
	home_icon_reorder.png
	default.png
	core_page_indicator_on.png
	core_page_indicator_on_horizontal.png
	edit_all_page_create.png
	edit_page.png
DESTINATION
	${IMAGEDIR}
)

INSTALL(FILES
	livebox/preview_alarm.png
	livebox/preview_contact_4x2.png
	livebox/preview_dual_clock.png
	livebox/preview_gallery.png
	livebox/preview_music.png
	livebox/preview_weather_4x2.png
	livebox/preview_calendar.png
	livebox/preview_contact_4x4.png
	livebox/preview_FMradio.png
	livebox/preview_internet_4x4.png
	livebox/preview_singel_clock.png
	livebox/preview_weather_4x4.png
DESTINATION
	"${IMAGEDIR}/livebox"
)

# End of a file