INSTALL(FILES
	${PROJECT_IMAGES_DIR}/default_bg.png
	${PROJECT_IMAGES_DIR}/default.png
DESTINATION
	${INSTALL_IMAGEDIR}
)

INSTALL(FILES
	${PROJECT_IMAGES_DIR}/livebox/preview_alarm.png
	${PROJECT_IMAGES_DIR}/livebox/preview_contact_4x2.png
	${PROJECT_IMAGES_DIR}/livebox/preview_dual_clock.png
	${PROJECT_IMAGES_DIR}/livebox/preview_gallery.png
	${PROJECT_IMAGES_DIR}/livebox/preview_music.png
	${PROJECT_IMAGES_DIR}/livebox/preview_weather_4x2.png
	${PROJECT_IMAGES_DIR}/livebox/preview_calendar.png
	${PROJECT_IMAGES_DIR}/livebox/preview_contact_4x4.png
	${PROJECT_IMAGES_DIR}/livebox/preview_FMradio.png
	${PROJECT_IMAGES_DIR}/livebox/preview_internet_4x4.png
	${PROJECT_IMAGES_DIR}/livebox/preview_singel_clock.png
	${PROJECT_IMAGES_DIR}/livebox/preview_weather_4x4.png
DESTINATION
	"${INSTALL_IMAGEDIR}/livebox"
)

# End of a file
